<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dopamine</string>
    <string name="home">Home</string>
    <string name="shorts">Shorts</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="channel_title">Channel Title</string>
    <string name="video_title">Video Title</string>
    <string name="time">00:00</string>
    <string name="sign_out">Sign out</string>
    <string name="codingVideos">Coding Videos</string>
    <string name="sportsVideos">Sports/E-Sports Videos</string>
    <string name="techVideos">Tech Videos</string>
    <string name="dopamine_library">Dopamine Library</string>
    <string name="clear_all">Clear all</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="youtube_data">Youtube Data</string>
    <string name="video_view">View</string>
    <string name="like">Like</string>
    <string name="pip">Picture In Picture</string>
    <string name="copy" tools:ignore="PrivateResource">Copy</string>
    <string name="your_favourites">Your Liked Videos</string>
    <string name="create_new_playlist">Create new playlist !</string>
    <string name="playlist_name">Playlist name</string>
    <string name="playlist_description">Playlist Description</string>
    <string name="create">Create Playlist</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Dialog and common messages -->
    <string name="error_title_something_went_wrong">Something went wrong</string>
    <string name="error_title_oops">Oops!</string>
    <string name="error_msg_something_went_wrong_retry">Oh no! Something went wrong. Please try again.</string>
    <string name="voice_search_prompt">Say Something 🧿</string>
    <string name="action_retry">Retry</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_try_again_later">Try again later</string>
    <string name="msg_search_history_cleared">Search History Cleared</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="your_custom_playlists">Your Custom Playlists</string>
    <string name="play_any_video_here">Stream any video here</string>
    <string name="play_video">Play Video</string>
    <string name="video_link">Video Link</string>
    <string name="watch_video_from_your_link">Watch video from your link</string>
    <string name="exp_1">Our app provides you to watch video from your link free without ad on single click.</string>
    <string name="experimental">Experimental</string>
    <string name="download_video_without_ad_now_available_in_our_app_for_android">Download video without ad, now available in our app for Android.</string>
    <string name="download_video_free">Download Video Free</string>
    <string name="download_video">Download Video</string>
    <string name="i_want_to_stop_the_download_video">I want to stop the download video !</string>
    <string name="use_advanced_mode">Use Advanced Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_experimental_search">Use Experimental Search</string>
    <string name="welcome_to_experimental_mode">Welcome To Experimental Mode</string>
    <string name="searchbar_hint">Search Something Here </string>
    <string name="voice_search">Voice Search</string>
    <string name="custom_url">Custom URL</string>
    <string name="channel_description">Channel Description</string>
    <string name="subscribers">Subscribers</string>
    <string name="stream_any_video_n_ad_free_on_dopamine">Stream Any Video \n Ad-Free on Dopamine</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="dynamic_colors_android_12">Dynamic Color</string>
    <string name="canary">Canary</string>
    <string name="beta">Beta</string>
    <string name="this_dynamic_color_is_available_on_android_14_but_it_s_a_different">This feature is available on Android 14 but currently unavailable.</string>
    <string name="dynamic_colors_android_14">Users Dynamic Colors (Android 14)</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="dopamine_theme_mode">Dopamine Theme</string>
    <string name="light"> ☀️ Day Theme </string>
    <string name="dark"> 🌙 Night Theme </string>
    <string name="system"> 🤖 System Theme </string>
    <string name="choose_dopamine_theme">Choose dopamine theme</string>
    <string name="i_m_developer_pre_release">Developer Pre-Release Build</string>
    <string name="about_us">About Us</string>
    <string name="developers">Developers</string>
    <string name="about_dopamine">About Dopamine</string>
    <string name="description">Dopamine is a cutting-edge YouTube clone designed to provide users with an immersive video-sharing experience. It is built using Kotlin for the backend and XML for the frontend, and leverages the power of Room Database, the official YouTube API, and the MVVM architecture to deliver seamless performance and a user-friendly interface.</string>
    <string name="app_version">App version</string>
    <string name="build_type">Build type</string>
    <string name="release_date">Release Date</string>
    <string name="for_more_information">For more information</string>
    <string name="github">Github</string>
    <string name="help_me">Help me</string>
    <string name="email">Email</string>
    <string name="about_me">About Me</string>
    <string name="website">Website</string>
    <string name="contact_me">Contact Me</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="send_email">Send Email</string>
    <string name="web_client_id">963836142894-dl1bho9tvka14n1ptia8lrodf5du1m8l.apps.googleusercontent.com</string>
    <string name="no_contact_available">No Contact Available</string>
    <string name="photos_from_user">Photos from User</string>
    <string name="chip">Chip</string>
    <string name="create_a_new_playlist">Create A New PlayList</string>
    <string name="playlist_icon">🗂️</string>
    <string name="todo">TODO</string>
    <string name="suggestion_item">Suggestion item</string>
    <string name="search_history_item">Search history item</string>
    <string name="discover">Discover</string>
    <string name="search_icon">🔍</string>
    <string name="next_video">Next Video…</string>
    <string name="history_icon">📜</string>
</resources>